tutorials/deploy-dependency-track/deploy/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-apiserver-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: dependency-track-apiserver
  ports:
  - port: 8088
    name: api
    protocol: TCP
    targetPort: 8080
