tutorials/deploy-dependency-track/deploy/api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dependency-track-apiserver-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "dependency-track-ip-api"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/pre-shared-cert: "dependency-track-cert-api"
spec:
  backend:
    serviceName: dependency-track-apiserver-svc
    servicePort: 8088
